# mongolino

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
docs/: aggregation-add-to-set-adversarial-fix-goal-loop.md  aggregation-group-unwind-compatibility-goal-loop.md  aggregation-lookup-pushdown-goal-loop.md  aggregation-match-pushdown-adversarial-fix-goal-loop.md  aggregation-unwind-group-side-table-adversarial-fix-goal-loop.md  aggregation-unwind-group-side-table-goal-loop.md  aggregation-v2-adversarial-fix-goal-loop.md  aggregation-v2-goal-loop.md  application-compatibility-adversarial-fix-goal-loop.md  application-compatibility-goal-loop.md  collation-adversarial-fix-goal-loop.md  collation-compatibility-goal-loop.md  crud-adversarial-review-fix-goal-loop.md  crud-compatibility-goal-loop.md  driver-workflow-semantics-goal-loop.md  e2e-adversarial-review-fix-goal-loop.md  e2e-pymongo-spec-goal-loop.md  index-compound-adversarial-fix-goal-loop.md  index-compound-planner-goal-loop.md  index-multikey-scalar-goal-loop.md  index-omission-lifecycle-fix-goal-loop.md  index-planner-v2-goal-loop.md  index-sparse-partial-adversarial-fix-goal-loop.md  index-sparse-partial-goal-loop.md  index-uplifts-roadmap.md  mongodb-compatibility-uplifts-roadmap.md  performance-baseline.md  performance-benchmark-adversarial-fix-goal-loop.md  performance-benchmark-foundation-goal-loop.md  performance-count-pushdown-adversarial-fix-goal-loop.md  performance-sqlite-count-pushdown-goal-loop.md  performance-sqlite-write-targeting-goal-loop.md  query-atomic-adversarial-fix-goal-loop.md  (+15 more)
(+45 files in other folders)
