[project]
name = "mongolino-e2e"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pymongo>=4.13,<5",
    "pytest>=8.4,<9",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
markers = [
    "e2e: tests that exercise mongolino through a real MongoDB driver",
]
